fix scrollbar color

--- a/hooksandhighs.com/frontend/src/input.css
+++ b/hooksandhighs.com/frontend/src/input.css
@@ -60,7 +60,7 @@
 
   .custom-scrollbar {
     scrollbar-width: thin;
-    scrollbar-color: #433743;
+    scrollbar-color: #564356;
   }
 
   /* Chrome, Edge, and Safari */
@@ -73,9 +73,9 @@
   }
 
   .custom-scrollbar::-webkit-scrollbar-thumb {
-    background-color: #433743;
+    background-color: #564356;
     border-radius: 10px;
-    border: 1px none #433743;
+    border: 1px none #564356;
   }
 
   .custom-full-height {
